--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -210,3 +210,22 @@ body {
     margin: 1rem !important;
   }
 }
+
+.custom-loader {
+  width: 4px;
+  height: 4px;
+  color: #6d737a;
+  border-radius: 50%;
+  box-shadow: 19px 0 0 7px, 38px 0 0 3px, 57px 0 0 0;
+  transform: translateX(-38px);
+  animation: d1 0.7s infinite alternate linear;
+}
+
+@keyframes d1 {
+  50% {
+    box-shadow: 19px 0 0 3px, 38px 0 0 7px, 57px 0 0 3px;
+  }
+  100% {
+    box-shadow: 19px 0 0 0, 38px 0 0 3px, 57px 0 0 7px;
+  }
+}
